# BookmarkSummarizer

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  LICENSE  README-CN.md  README.MD  TODO.md  build_app.py  crawl.py  default_config.toml  fuzzy_bookmark_search.py  index.py  pyproject.toml  requirements.txt  run_with_env.py  semantic_bookmarks_search_fast_api_faiss_single_file.py
.github/workflows/: build-exe.yml  build.yml  ci-build.yml  ci-cd.yml  python-ci.yml  releases-ci-cd.yml
custom_parsers/: __init__.py  a_suspended_tabs.py  youtube.py  zhihu.py
docs/: lmdb_migration_report.md  memory_test_report.md  pagination_design.md
examples/: quick_start.py
measure/: measure_crawl_memory.py  measure_indexing_time.py  measure_memory_usage.py  measure_search_times.py
tests/: check_lmdb.py  check_lmdb_readonly.py  test_build_app_extended.py  test_crawl.py  test_crawl_advanced.py  test_crawl_boost.py  test_crawl_coverage.py  test_crawl_expert.py  test_crawl_extended.py  test_crawl_missing.py  test_crawl_no_fetch.py  test_fuzzy_bookmark_search_coverage.py  test_fuzzy_bookmark_search_extended.py  test_fuzzy_coverage.py  test_fuzzy_load_lmdb.py  test_index_extended.py  test_load.py  test_search.py  test_suspended_tabs_parser.py  test_youtube_parser.py  test_zhihu_parser_extended.py  test_zodb_memory.py
