[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-summarizer"
version = "0.1.0"
description = "BookmarkSummarizer is a powerful tool that crawls your Chrome bookmarks, generates summaries using large language models, and turns them into a personal knowledge base. Easily search and utilize all your bookmarked web resources without manual organization."
readme = {file = "README.MD", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
authors = [
    {name = "wyj"}
]
maintainers = [
    {name = "Stephen Karl Larroque", email = "lrq3000@gmail.com"},
]
keywords = ["bookmarks", "crawler", "summarizer", "llm", "ai", "knowledge-base", "chrome", "search", "fuzzy-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities"
]
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "chardet==5.2.0",
    "urllib3==2.0.7",
    "openai==1.3.0",
    "tqdm==4.66.1",
    "python-dotenv==1.0.0",
    "selenium==4.14.0",
    "webdriver-manager==4.0.1",
    "lxml==4.9.3",
    "Whoosh==2.7.4",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "coverage[toml]"
]

[project.urls]
Homepage = "https://github.com/wyj/BookmarkSummarizer"
Repository = "https://github.com/wyj/BookmarkSummarizer"
Issues = "https://github.com/wyj/BookmarkSummarizer/issues"

[project.scripts]
crawl = "crawl:main"
fuzzy-search = "fuzzy_bookmark_search:main"
run-with-env = "run_with_env:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bookmark_summarizer*"]

[tool.setuptools.package-data]
"*" = ["README*", "LICENSE"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=bookmark_summarizer --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ["bookmark_summarizer"]
omit = [
    "*/tests/*",
    "*/test_*.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.cibuildwheel]
build = "cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = ["*-win32", "*-manylinux_i686"]
test-command = "pytest {package}/tests"